# PureRage_Game_Public

./: README.md  app.py  bluesky_api.py  hello.py  pyproject.toml  requirements.txt
characters/: 01-Golem.json  02-Blade-Mantis.json  03-Pyromancer.json  04-Berserker.json  05-Grand-Duelist.json  06-Mammoth-Turtle.json  07-Monk.json  08-Hemomancer.json  09-Ripjaw.json
css/: battle.css  character_select.css  navbar.css  popup.css  style.css
js/: battle-ui.js  character_data.js  character_select.js  logout.js  script.js  signin.js
js/game-logic/: AbilityCharEight.js  AbilityCharFive.js  AbilityCharFour.js  AbilityCharNine.js  AbilityCharOne.js  AbilityCharSeven.js  AbilityCharSix.js  AbilityCharThree.js  AbilityCharTwo.js  character.js  functions.js  main.js
public/: battle.html  character_select.html  intro.html  navbar-after-login.html  navbar-before-login.html  popup.html  signup.html  user_feedback.html
tests/: conftest.py  test_app_login.py  test_app_register.py  test_bluesky_api.py  test_session.py
