[project]
name = "turn-based-battle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-restful>=0.3.10",
    "pyodbc>=5.2.0",
    "pytest>=8.3.5",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
]
